# dbt_health_demo

./: .gitignore
demo_health_pg/: README.md  dbt_project.yml  pyproject.toml
demo_health_pg/macros/: age_groups.sql  clean_and_cast_column.sql  clean_numeric.sql  extract_age.sql  format_date.sql  format_phone.sql  format_timestamp.sql  generate_surrogate.sql  percentage_count.sql  zero_if_null.sql
demo_health_pg/models/: schema.yml
demo_health_pg/models/mart/: dim_patients.sql  fct_appointments.sql  fct_claims.sql
demo_health_pg/models/raw/: schema.yml
demo_health_pg/models/staging/: schema.yml  stg_appointments.sql  stg_claims.sql  stg_departments.sql  stg_diagnosis.sql  stg_encounters.sql  stg_patients.sql  stg_payments.sql  stg_procedures.sql  stg_providers.sql  stg_web_activity.sql
